--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -49,14 +49,17 @@
 }
 
 .streetcodeTitle {
-  @include mut.rem-padded(7px, 10px, 7px, 0px);
-  @include mut.with-font(ft.$closer-text-font, $font-weight: 600, $font-size: 36px);
-  color: c.$lighter-black-color;
+    @include mut.rem-padded(7px, 10px, 7px, 0px);
+    @include mut.with-font(ft.$closer-text-font, $font-weight: 600, $font-size: 36px);
+    color: c.$lighter-black-color;
+    line-height: 47.52px;
 }
 
 .streetcodeDate {
-  @include mut.rem-padded(7px, 10px, 13px, 0px);
-  font-size: f.pxToRem(20px);
+    @include mut.rem-padded(7px, 10px, 13px, 0px);
+    font-size: f.pxToRem(20px);
+    color: c.$lighter-black-color;
+    line-height: 23px;
 }
 
 .headerContainer {
@@ -66,15 +69,15 @@
 }
 
 .teaserBlock {
-  width: 100%;
-  @include mut.rem-margined(13px, 3px, 0px, 0px);
-  @include mut.rem-padded(0px, 5px, 0px, 0px);
-  line-height: 23px;
-  max-height: 254px;
-  overflow: auto;
-  color: c.$lighter-black-color;
- 
- 
+    width: 100%;
+    @include mut.rem-margined(13px, 3px, 0px, 0px);
+    @include mut.rem-padded(0px, 5px, 0px, 0px);
+    line-height: 23px;
+    max-height: 254px;
+    overflow: auto;
+    font-size: f.pxToRem(20px);
+    font-weight:300;
+    //color: c.$lighter-black-color; 
 }
 .teaserBlockContainer{
   position: relative;
@@ -191,74 +194,74 @@
 
 @media screen and (max-width: 1024px) {
 
-  .blockCentering {
+    .blockCentering {
 
-    .headerContainer {
-      @include mut.rem-margined($top: 0px, $right: 10px, $bottom: 0px, $left: 21px);
-    }
-
-    .teaserBlock {
-      line-height: f.pxToRem(19px);
-      max-height: f.pxToRem(214px);
-      @include mut.with-font($font-weight: 300, $font-size: 16px);
-    }
-
-    .card {
-      width: 100%;
-      height: unset;
-      background-color: rgba(0, 0, 0, 0) !important;
-      .leftSider {
-        @include mut.sized(360px, 489px);
-        flex: 0 0 f.pxToRem(360px);
-        .leftSiderContent {
-          background-color: c.$accented-gray-color;
-          @include mut.border(c.$pure-white-color,10px,solid);
-        }
-      }
-
-      .streetcodeIndex {
-        @include mut.rem-padded(8px, 10px, 0px, 0px);
-        @include mut.with-font($font-weight: 300, $font-size: 15px);
-      }
-
-      .streetcodeTitle {
-        @include mut.rem-padded(0px, 10px, 0px, 0px);
-        @include mut.with-font($font-weight: 500, $font-size: 32px);
-        @include mut.withLineHeight(42px);
-      }
-
-      .streetcodeDate {
-        @include mut.rem-padded(0px, 10px, 0px, 0px);
-        @include mut.with-font(ft.$closer-text-font, $font-weight: 400, $font-size: 20px);
-        @include mut.withLineHeight(23px);
-      }
-
-      .streetcodeImg {
-        @include mut.sized(290px, 377px);
-      }
-
-      .cardFooter {
-        bottom: f.pxToRem(10px);
-
-        .animateFigureBtn {
-
-          @include mut.hidden();
+        .headerContainer {
+            @include mut.rem-margined($top: 0px, $right: 10px, $bottom: 0px, $left: 21px);
         }
 
-        .audioBtn {
-          @include mut.with-font($font-weight: 400, $font-size: 14px);
-          @include mut.sized(95%, 46px);
-
-          .playCircle {
-            font-size: f.pxToRem(23px);
-            margin-right: f.pxToRem(10px);
-          }
+        .teaserBlock {
+            line-height: f.pxToRem(19px);
+            max-height: f.pxToRem(214px);
+            @include mut.with-font($font-weight: 300, $font-size: 16px);
         }
-      }
 
+        .card {
+            width: 100%;
+            height: unset;
+            background-color: rgba(0, 0, 0, 0) !important;
 
+            .leftSider {
+                @include mut.sized(360px, 489px);
+                flex: 0 0 f.pxToRem(360px);
+
+                .leftSiderContent {
+                    background-color: c.$accented-gray-color;
+                    @include mut.border(c.$pure-white-color,10px,solid);
+                }
+            }
+
+            .streetcodeIndex {
+                @include mut.rem-padded(8px, 10px, 0px, 0px);
+                @include mut.with-font($font-weight: 300, $font-size: 15px);
+            }
+
+            .streetcodeTitle {
+                @include mut.rem-padded(0px, 10px, 0px, 0px);
+                @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+                @include mut.withLineHeight(42px);
+            }
+
+            .streetcodeDate {
+                @include mut.rem-padded(0px, 10px, 0px, 0px);
+                @include mut.with-font(ft.$roboto-font, $font-weight: 400, $font-size: 20px);
+                @include mut.withLineHeight(23px);
+            }
+
+            .streetcodeImg {
+                @include mut.sized(290px, 377px);
+            }
+
+            .cardFooter {
+                bottom: f.pxToRem(10px);
+
+                .animateFigureBtn {
+
+                    @include mut.hidden();
+                }
+
+                .audioBtn {
+                    @include mut.with-font($font-weight: 400, $font-size: 14px);
+                    @include mut.sized(95%, 46px);
+
+                    .playCircle {
+                        font-size: f.pxToRem(23px);
+                        margin-right: f.pxToRem(10px);
+                    }
+                }
+            }
+        }
     }
-  }
 }
 
 @media screen and (max-width: 660px) {
