--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -85,7 +85,7 @@ and (max-width: 768px){
   }
   
   .interestingFactSlide {
-      
+   
     //  @include mut.sized(233px, 275px);//250px
     // @include mut.sized(90%, 260px);//250px
     @include mut.sized(88%); //80
@@ -96,6 +96,7 @@ and (max-width: 768px){
       //  @include mut.sized(100%, 160px);//200px
        @include mut.sized(100%, 135px);//200px
        @include mut.rounded(20px, 20px);
+
       img{
         @include mut.sized(100%, 100%)
       }
@@ -114,8 +115,8 @@ and (max-width: 768px){
        .mainText {
         //  @include mut.rem-padded(0, 20px, 0px, 20px);
         @include mut.rem-padded(0, 12px, 0px, 12px);
-        max-width: 316px;
-        max-height: 144px;
+        // max-width: 316px;
+        // max-height: 144px;
 
          @include mut.with-font($font-weight: 300, $font-size: 12px);
         //  line-height: f.pxToEm(18px);
@@ -134,7 +135,64 @@ and (max-width: 768px){
   } 
  }
 
-//  @media screen
+
+ 
+@media screen and (max-width: 480px) { 
+
+  .slick-slide {
+    margin-left: 5.15px;
+  }
+  .slick-slide {
+    // padding-left: 10px;
+    // padding-right: 0;
+}
+
+  //   margin-right: -11px; /* adjust this value to your desired gap */
+  // }
+  .interestingFactSlide {
+    // @include mut.sized(290px, 312px);
+    @include mut.sized(63%);// 344px
+    @include mut.full-rounded(15px);
+
+      .slideImage {
+        // @include mut.sized(100%, 188px);
+        @include mut.sized(100%);//
+        @include mut.rounded(20px, 20px);
+
+      }
+      .slideText {
+        @include mut.full-rounded(0px);
+         @include mut.sized(100%, 100px);//, 155px
+         //  @include mut.rem-padded(4px, 20px, 0px, 20px);
+         .heading {
+          //  @include mut.rem-padded(0,0,0, 15px);
+          @include mut.with-font($font-weight: 500, $font-size: 12px);
+          line-height: f.pxToEm(12px);
+//           font-family: 'Roboto';
+// font-style: normal;
+// font-weight: 500;
+// font-size: 12px;
+// line-height: 16px;
+        }
+        .mainText {
+
+          @include mut.with-font($font-weight: 300, $font-size: 10px);
+          line-height: f.pxToEm(14.5px);
+        }
+      } 
+      .readMoreParagraph {
+         @include mut.rem-padded(4px, 20px, 0px, 12px);
+        @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+      }
+  }
+ }
+
+ 
+
+
+
+
+ //  @media screen
 //    and (max-width: 1024px){
 //   //  and (max-width: 1024px){
 
@@ -180,64 +238,3 @@ and (max-width: 768px){
 //      }
 //   } 
 //  }
- 
-@media screen and (max-width: 480px) { 
-
-  
-  .interestingFactSlide {
-    // @include mut.sized(290px, 312px);
-    @include mut.sized(63%);// 344px
-    @include mut.full-rounded(15px);
-
-      .slideImage {
-        // @include mut.sized(100%, 188px);
-        @include mut.sized(100%);//
-        @include mut.rounded(20px, 20px);
-
-      }
-      .slideText {
-        @include mut.full-rounded(0px);
-         @include mut.sized(100%, 95px);//, 155px
-         //  @include mut.rem-padded(4px, 20px, 0px, 20px);
-         .heading {
-          //  @include mut.rem-padded(0,0,0, 15px);
-          @include mut.with-font($font-weight: 500, $font-size: 12px);
-          line-height: f.pxToEm(12px);
-//           font-family: 'Roboto';
-// font-style: normal;
-// font-weight: 500;
-// font-size: 12px;
-// line-height: 16px;
-        }
-        .mainText {
-//           font-family: 'Roboto';
-// font-style: normal;
-// font-weight: 300;
-// font-size: 12px;
-// line-height: 14px;
-          @include mut.with-font($font-weight: 300, $font-size: 9px);
-          line-height: f.pxToEm(17px);
-
-          // &::-webkit-scrollbar-thumb,
-          // &::-webkit-scrollbar-track {
-          //   @include mut.full-rounded(15px);
-          // }
-        
-          // &::-webkit-scrollbar-thumb {
-          //   background: c.$card-scrollbar-track-color;
-          // }
-        
-          // &::-webkit-scrollbar-track {
-          //   background: c.$accented-gray-color;
-          //   @include mut.rem-margined($top: -15px, $bottom: 90px);
-          // }
-        }
-      } 
-      .readMoreParagraph {
-        //  @include mut.rem-padded(4px, 20px, 0px, 20px);
-        @include mut.with-font(ft.$roboto-font, 300, 9px, normal);        
-      }
-  }
- }
-
- 
