--- a/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactBlock/ContactBlock.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactBlock/ContactBlock.styles.scss
@@ -44,9 +44,10 @@
             color: #1D1F23;
         } 
     }
-    
-    
-    @media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 1024px) {
+    .contactUsContainer{
         .contactBlock{
             bottom: 0;
             .icon{
@@ -74,6 +75,6 @@
                 letter-spacing: 0.005em;
             }
         }
-    } 
-}
+    }   
+} 
 
