--- a/src/features/AdditionalPages/PrivatePolicyPage/Title/Title.styles.scss
+++ b/src/features/AdditionalPages/PrivatePolicyPage/Title/Title.styles.scss
@@ -29,8 +29,10 @@
             margin-top: f.pxToRem(16px);    
         }
     }
-    
-    @media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 1024px) {
+    .privatePolicyContainer{
         .titleContainer{
             .titleBig{
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
