--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/DonateBtn/DonateBtnRectangle.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/DonateBtn/DonateBtnRectangle.styles.scss
@@ -11,6 +11,8 @@
         color: #E04031;
         cursor: pointer;
 
+        text-align: center;
+
         border: 3px solid #E04031;
         background-color: #FFFFFF; 
         padding: f.pxToRem(25px) f.pxToRem(26px);    
@@ -18,3 +20,17 @@
         box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);    
     }
 }
+
+@media screen and (max-width: 1024px) {
+    .partnersContainer .donateBtnRectangleContainer .donateBtn{        
+        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 14px);
+        line-height: 16px;
+
+        border: 2px solid #E04031;
+        padding: f.pxToRem(13px) f.pxToRem(113px);
+        @include mut.full-rounded(10px);
+    } 
+}
+
+
+
