--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtn/PartnersBtn.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtn/PartnersBtn.styles.scss
@@ -11,10 +11,23 @@
         color: #FFFFFF;
         cursor: pointer;
         
+        text-align: center;
+
         padding: f.pxToRem(23px) f.pxToRem(26px);
         background-color: #E04031;      
         
         box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);  
     }
+}
+
+@media screen and (max-width: 1024px) {
+    .partnersContainer .partnersBtnContainer .partnersBtn{
+        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 14px);
+        line-height: 16px;
+        white-space: nowrap;
+        
+        padding: f.pxToRem(13px) f.pxToRem(113px);
+        @include mut.full-rounded(10px);
+    } 
 }
 
