Fixed fact slider (768res)

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -77,9 +77,19 @@ and (max-width: 768px){
   .interestingFactsSliderContainer .slick-list {  
     @include mut.rem-padded(120px);
   }
-  .interestingFactsSliderContainer .sliderClass {
-    height: 110%;
-  }
+//   .slick-slider {
+//     margin:0 -2px;
+// }
+
+// .slick-slide {
+  
+//   margin-right:2px;
+//   margin-left:2px;
+// }
+
+  // .interestingFactsSliderContainer .sliderClass {
+  //   height: 110%;
+  // }
   .interestingFactsSliderContainer .slick-dots {
     margin-bottom: 200px;
   }
@@ -88,13 +98,13 @@ and (max-width: 768px){
    
     //  @include mut.sized(233px, 275px);//250px
     // @include mut.sized(90%, 260px);//250px
-    @include mut.sized(88%); //80
+    @include mut.sized(75%); //80
 
     @include mut.full-rounded(20px);
     
      .slideImage {
       //  @include mut.sized(100%, 160px);//200px
-       @include mut.sized(100%, 135px);//200px
+       @include mut.sized(100%, 132px);//200px
        @include mut.rounded(20px, 20px);
 
       img{
@@ -102,14 +112,14 @@ and (max-width: 768px){
       }
      }
      .slideText {
-       @include mut.sized(100%, 140px);
+       @include mut.sized(100%, 105px);
       // @include mut.sized(100%, 165px);
       //  @include mut.rem-padded(1px, 2px, 5px, 0px);
       // @include mut.rem-margined(1px, 16px, 24px, 16px);
 
        .heading {
         @include mut.rem-padded(6px, 20px, 4px, 12px);
-         @include mut.with-font($font-weight: 500, $font-size: 14px);
+         @include mut.with-font($font-weight: 500, $font-size: 12px);
          line-height: f.pxToEm(17px);
        }
        .mainText {
@@ -118,7 +128,7 @@ and (max-width: 768px){
         // max-width: 316px;
         // max-height: 144px;
 
-         @include mut.with-font($font-weight: 300, $font-size: 12px);
+         @include mut.with-font($font-weight: 300, $font-size: 10px);
         //  line-height: f.pxToEm(18px);
          line-height: f.pxToEm(14px);
 
@@ -130,7 +140,7 @@ and (max-width: 768px){
       //  @include mut.rem-padded(10px, 20px, 0px, 20px);
       @include mut.rem-padded(4px, 20px, 0px, 12px);
 
-      @include mut.with-font(ft.$roboto-font, 300, 12px, normal);        
+      @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
      }
   } 
  }
