--- a/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
@@ -6,7 +6,7 @@
 .StreetcodeTableWrapper {
     @include mut.sized(80%);
     margin-top: f.pxToRem(82px);
-    margin-right: f.pxToRem(50px);
+    overflow: hidden;
     float: right;
 
     .ant-btn-primary:disabled {
@@ -16,24 +16,7 @@
       .ant-btn-default {
         border-color: c.$accented-red-color;
     }
-    
-    .addButton {
-        @include mut.sized(142px, 39px);
-        @include mut.flex-centered();
-        @include mut.full-rounded(12px);
-        @include mut.with-font($font-weight: 500, $font-size: 16px);
-    
-        margin: 10px;
-
-        background-color: c.$accented-red-color;
-        border-color: c.$accented-red-color;
-        color: c.$pure-white-color;
-
-        &:hover {
-            background-color: c.$dark-red-color;
-        }
-    }
-}
+}   
 
 .actionButton {
     margin-right: 10px;
@@ -65,5 +48,32 @@
 
     &:active {
         size: 1.3;
+    }
+}
+
+.underTableElement {
+    display: inline-block;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 30px;
+
+    .pagenationElement, .pageAmountElement {
+        @include mut.with-font($font-size: 16px);
+        
+        &:hover {
+            border-color: c.$accented-red-color;
+        }
+        &:focus-within {
+            border-color: c.$accented-red-color;
+        }
+    }
+
+    .pagenationElement {
+        @include mut.sized(200px, 30px);
+        float: right;
+    }
+    
+    .pageAmountElement {
+        float: right;
     }
 }
