--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -86,7 +86,7 @@
     overflow: auto;
     font-size: f.pxToRem(20px);
     font-weight:300;
-    //color: c.$lighter-black-color; 
+
   &::-webkit-scrollbar {
     display: none;
   }
@@ -344,4 +344,6 @@
       }
     }
   }
+}
+}
 }
